# tui-builder

./: .gitignore  AGENTS.md  Containerfile  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md  default.mcp.json
.agents/commands/: AGENTS.md  commit.md  deploy-mcp.md  extract-learnings.md  extract-mcp-prompts.md  extract-mcp-resources.md  extract-mcp-tools.md  extract-templates.md  git-squash.md  update-agents-md.md
.agents/docs/architecture/: decisions.md
.agents/docs/conventions/: coding-style.md  imports.md  naming.md  project-structure.md
.agents/docs/mcp/: api-server.md  dev-server.md  overview.md  patterns.md
.agents/docs/patterns/: error-handling.md  logging.md  typing.md
.agents/docs/tooling/: pytest.md  ruff.md  uv.md
.agents/docs/workflows/: contributing.md  pr-process.md  releases.md  testing.md
.agents/scratch/: AGENTS.md
.agents/scratch/context/: _template.md
.agents/scratch/decisions/: _template.md
.agents/scratch/notes/: _template.md
.agents/scratch/research/: _template.md
src/: AGENTS.md  __init__.py
src/my_package/: __init__.py  dev_mcp.py  mcp_server.py
src/tui_builder/: __init__.py  app.py  mcp_server.py
src/tui_builder/prompts/: __init__.py  debug.py  design.py
src/tui_builder/resources/: __init__.py  components.py  css.py  patterns.py
src/tui_builder/tools/: __init__.py  generate.py  testing.py  validate.py
tests/: AGENTS.md  conftest.py  test_example.py  test_prompts.py  test_resources.py  test_tools_generate.py  test_tools_testing.py  test_tools_validate.py
