[project]
name = "python-project-template"
version = "0.1.0"
description = "A Python project template with AGENTS.md documentation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# TODO: Rename to your package name
packages = ["src/my_package"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
# TODO: Rename to your package name
known-first-party = ["my_package"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

