[project]
name = "tui-builder"
version = "0.1.0"
description = "MCP server with prompts, resources, and tools for building high-quality TUI apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
tui-builder = "tui_builder.app:main"
tui-builder-mcp = "tui_builder.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tui_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tui_builder"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

